# FBD_Project

./: .gitignore  Diagram_0.txt  Dockerfile  README.md  app.py  calcular_pontuacoes_equipas.py  check_schema.py  criar_utilizadores_demo.py  generate_demo_users.py  generate_player_stats.py  populate_db.py  pyproject.toml  recalcular_pontuacoes.py  test_pontuacoes.py  update_all_team_points.py
APFE_1000_2000/: apfe_submit.md
APFE_125059_125913/: apfe_submit.md
APFE_FINAL_125059_125913/: apfe_final_submit.md
APFT_1000_2000/: apft_submit.md
APFT_125059_125913/: apft_submit.md
DiagramsDDL/: DML_Example.sql  DropTables.sql
flask-env/: pyvenv.cfg
persistence/: clubs.py  countries.py  equipa.py  gerar_estatisticas.py  import_all_players.py  jornadas.py  leagues.py  match.py  players.py  pontuacoes.py  session.py  test_api_players.py  users.py
queries/: indexes.sql  sp_AbandonarLiga.sql  sp_AtualizarPontuacaoEquipa.sql  sp_AtualizarPontuacoesBatch.sql  sp_CalcularPontuacaoEquipa.sql  sp_CalcularPontuacaoJogador.sql  sp_CriarEquipa.sql  sp_CriarLiga.sql  sp_CriarLigaPublica.sql  sp_InserirEstatisticasJogador.sql  sp_JuntarLiga.sql  sp_JuntarLigaAutomatico.sql  sp_ObterDetalhesEquipaParaVisualizacao.sql  sp_ObterEquipaJornadaCompleta.sql  sp_ObterJornadaAtual.sql  sp_ObterLigasPublicasParaUtilizador.sql  sp_ObterPontuacoesJornadasEquipa.sql  sp_ObterRankingLigaComEquipas.sql  sp_RemoverJogadorEquipa.sql  sp_TrocarJogadorBancoCampo.sql  sp_adicionarJog.sql  sp_calcularPontuacaoJogador.sql  sp_criarLigasPaisSeNaoExistir.sql  sp_criarLigasSeNaoExistir.sql  (+26 more)
(+30 files in other folders)
