[project]
name = "fbd-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Bernardo Coelho",email = "bernardomcoelho@ua.pt"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

